istio/istio-jwt-authorization-2/yaml/jwt-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-on-ingress
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
  - issuer: "demo-api@issuer.cloud"
    jwksUri: http://172.18.0.241/auth/v1/jwks #https://raw.githubusercontent.com/istio/istio/release-1.20/security/tools/jwt/samples/jwks.json
    #forwardOriginalToken: true
    outputClaimToHeaders: # https://istio.io/latest/docs/tasks/security/authentication/claim-to-header/
    - header: "x-sub"
      claim: "sub"
    - header: "x-iss"
      claim: "iss"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
  - to:
    - operation:
        paths: ["/auth/v1/login"] #paths: ["/auth/v1/login", "/auth/v1/jwks"]
